Menu has been added. Bot executor has been added.